crates/pgls_pretty_print/tests/snapshots/multi/tests__path_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/path_100.sql
snapshot_kind: text
---
CREATE TABLE path_tbl (f1 path);

INSERT INTO path_tbl VALUES ('[(1,2),(3,4)]');

INSERT INTO path_tbl VALUES (' ( ( 1 , 2 ) , ( 3 , 4 ) ) ');

INSERT INTO path_tbl VALUES ('[ (0,0),(3,0),(4,5),(1,6) ]');

INSERT INTO path_tbl VALUES ('((1,2) ,(3,4 ))');

INSERT INTO path_tbl VALUES ('1,2 ,3,4 ');

INSERT INTO path_tbl VALUES (' [1,2,3, 4] ');

INSERT INTO path_tbl VALUES ('((10,20))');

INSERT INTO path_tbl VALUES ('[ 11,12,13,14 ]');

INSERT INTO path_tbl VALUES ('( 11,12,13,14) ');

INSERT INTO path_tbl VALUES ('[]');

INSERT INTO path_tbl VALUES ('[(,2),(3,4)]');

INSERT INTO path_tbl VALUES ('[(1,2),(3,4)');

INSERT INTO path_tbl VALUES ('(1,2,3,4');

INSERT INTO path_tbl VALUES ('(1,2),(3,4)]');

SELECT f1 AS open_path FROM path_tbl WHERE isopen(f1);

SELECT f1 AS closed_path FROM path_tbl WHERE isclosed(f1);

SELECT pclose(f1) AS closed_path FROM path_tbl;

SELECT popen(f1) AS open_path FROM path_tbl;

SELECT pg_input_is_valid('[(1,2),(3)]', 'path');

SELECT * FROM pg_input_error_info('[(1,2),(3)]', 'path');

SELECT pg_input_is_valid('[(1,2,6),(3,4,6)]', 'path');

SELECT * FROM pg_input_error_info('[(1,2,6),(3,4,6)]', 'path');
