crates/pgls_pretty_print/tests/snapshots/multi/tests__point_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/point.sql
snapshot_kind: text
---
SET extra_float_digits = 0;

INSERT INTO point_tbl (f1) VALUES ('asdfasdf');

INSERT INTO point_tbl (f1) VALUES ('(10.0 10.0)');

INSERT INTO point_tbl (f1) VALUES ('(10.0, 10.0) x');

INSERT INTO point_tbl (f1) VALUES ('(10.0,10.0');

INSERT INTO point_tbl (f1) VALUES ('(10.0, 1e+500)');

SELECT * FROM point_tbl;

SELECT p.* FROM point_tbl AS p WHERE p.f1 << '(0.0, 0.0)';

SELECT p.* FROM point_tbl AS p WHERE '(0.0,0.0)' >> p.f1;

SELECT p.* FROM point_tbl AS p WHERE '(0.0,0.0)' |>> p.f1;

SELECT p.* FROM point_tbl AS p WHERE p.f1 <<| '(0.0, 0.0)';

SELECT p.* FROM point_tbl AS p WHERE p.f1 ~= '(5.1, 34.5)';

SELECT p.* FROM point_tbl AS p WHERE p.f1 <@ CAST('(0,0,100,100)' AS box);

SELECT p.* FROM point_tbl AS p WHERE CAST('(0,0,100,100)' AS box) @> p.f1;

SELECT p.* FROM point_tbl AS p WHERE NOT p.f1 <@ CAST('(0,0,100,100)' AS box);

SELECT p.* FROM point_tbl AS p WHERE p.f1 <@ CAST('[(0,0),(-10,0),(-10,10)]' AS path);

SELECT p.* FROM point_tbl AS p WHERE NOT CAST('(0,0,100,100)' AS box) @> p.f1;

SELECT p.f1, p.f1 <-> CAST('(0,0)' AS point) AS dist FROM point_tbl AS p ORDER BY dist;

SELECT
  p1.f1 AS point1,
  p2.f1 AS point2,
  p1.f1 <-> p2.f1 AS dist
FROM
  point_tbl AS p1,
  point_tbl AS p2
ORDER BY dist,
  p1.f1[0],
  p2.f1[0];

SELECT
  p1.f1 AS point1,
  p2.f1 AS point2
FROM
  point_tbl AS p1,
  point_tbl AS p2
WHERE
  p1.f1 <-> p2.f1 > 3;

SELECT
  p1.f1 AS point1,
  p2.f1 AS point2,
  p1.f1 <-> p2.f1 AS distance
FROM
  point_tbl AS p1,
  point_tbl AS p2
WHERE
  p1.f1 <-> p2.f1 > 3 AND p1.f1 << p2.f1
ORDER BY distance,
  p1.f1[0],
  p2.f1[0];

SELECT
  p1.f1 AS point1,
  p2.f1 AS point2,
  p1.f1 <-> p2.f1 AS distance
FROM
  point_tbl AS p1,
  point_tbl AS p2
WHERE
  p1.f1 <-> p2.f1 > 3 AND
  p1.f1 << p2.f1 AND
  p1.f1 |>> p2.f1
ORDER BY distance;

CREATE TEMPORARY TABLE point_gist_tbl (f1 point);

INSERT INTO point_gist_tbl SELECT '(0,0)' FROM generate_series(0, 1000);

CREATE INDEX "point_gist_tbl_index"
ON point_gist_tbl
USING gist
(
  f1
);

INSERT INTO point_gist_tbl VALUES ('(0.0000009,0.0000009)');

SET enable_seqscan = 'true';

SET enable_indexscan = 'false';

SET enable_bitmapscan = 'false';

SELECT COUNT(*) FROM point_gist_tbl WHERE f1 ~= CAST('(0.0000009,0.0000009)' AS point);

SELECT
  COUNT(*)
FROM
  point_gist_tbl
WHERE
  f1 <@
  CAST('(0.0000009,0.0000009),(0.0000009,0.0000009)'
  AS box);

SELECT COUNT(*) FROM point_gist_tbl WHERE f1 ~= CAST('(0.0000018,0.0000018)' AS point);

SET enable_seqscan = 'false';

SET enable_indexscan = 'true';

SET enable_bitmapscan = 'true';

SELECT COUNT(*) FROM point_gist_tbl WHERE f1 ~= CAST('(0.0000009,0.0000009)' AS point);

SELECT
  COUNT(*)
FROM
  point_gist_tbl
WHERE
  f1 <@
  CAST('(0.0000009,0.0000009),(0.0000009,0.0000009)'
  AS box);

SELECT COUNT(*) FROM point_gist_tbl WHERE f1 ~= CAST('(0.0000018,0.0000018)' AS point);

RESET enable_seqscan;

RESET enable_indexscan;

RESET enable_bitmapscan;

SELECT pg_input_is_valid('1,y', 'point');

SELECT * FROM pg_input_error_info('1,y', 'point');
